added block user feature
